# AeroPulse

./: README.md  pyproject.toml  test.html
notebooks/: Main_Notebook.ipynb
src/scraping/: fetch_reviews.py
